--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# My shell script for change user.name and user.email of all commits
+CHANGE_AUTHOR_NAME_AND_EMAIL_OF_ALL_COMMITS.sh
+
 # Compiled class file
 *.class
 
