Ler dados até a quebra de linha

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,36 @@
 # My shell script for change user.name and user.email of all commits
 CHANGE_AUTHOR_NAME_AND_EMAIL_OF_ALL_COMMITS.sh
 
+### IntelliJ IDEA ###
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
+
 # Compiled class file
 *.class
 
